Closed
      
        Bug 915625
      
      
        Opened 12 years ago
          Closed 12 years ago
      
        
    
  
Intermittent PROCESS-CRASH | tp5o | application crashed [@ nsScriptLoader::GetScriptContext(JSObject**)]    
    Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
        RESOLVED
        FIXED
        
    
  
        
            mozilla26
        
    
  
| Tracking | Status | |
|---|---|---|
| firefox24 | --- | unaffected | 
| firefox25 | --- | unaffected | 
| firefox26 | --- | fixed | 
People
(Reporter: emorley, Assigned: bhackett1024)
References
Details
(Keywords: crash, intermittent-failure)
Crash Data
Attachments
(1 file, 1 obsolete file)
| 833 bytes,
          patch         | bzbarsky
:
              
              review+ | Details | Diff | Splinter Review | 
Ubuntu HW 12.04 mozilla-inbound talos tp5o on 2013-09-12 00:25:52 PDT for push 5a4bb2092618
slave: talos-linux32-ix-042
https://tbpl.mozilla.org/php/getParsedLog.php?id=27752783&tree=Mozilla-Inbound
{
00:31:00     INFO -  Cycle 1(24): loaded http://localhost/page_load_test/tp5n/chinaz.com/chinaz.com/index.html (next: http://localhost/page_load_test/tp5n/cnn.com/www.cnn.com/index.html)
00:31:00     INFO -  RSS: Main: 156459008
00:31:00     INFO -  Cycle 1(25): loaded http://localhost/page_load_test/tp5n/chinaz.com/chinaz.com/index.html (next: http://localhost/page_load_test/tp5n/cnn.com/www.cnn.com/index.html)
00:31:00     INFO -  RSS: Main: 156459008
00:31:00     INFO -  Cycle 1(1): loaded http://localhost/page_load_test/tp5n/cnn.com/www.cnn.com/index.html (next: http://localhost/page_load_test/tp5n/dailymail.co.uk/www.dailymail.co.uk/ushome/index.html)
00:31:00     INFO -  RSS: Main: 151883776
00:31:00     INFO -  __FAILbrowser non-zero return code (2816)__FAIL
00:31:00     INFO -  DEBUG : Terminating: firefox, plugin-container, crashreporter
00:31:00     INFO -  mozcrash INFO | Downloading symbols from: http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-inbound-linux/1378966718/firefox-26.0a1.en-US.linux-i686.crashreporter-symbols.zip
00:31:00     INFO -  INFO : Downloading symbols from: http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-inbound-linux/1378966718/firefox-26.0a1.en-US.linux-i686.crashreporter-symbols.zip
00:31:17     INFO -  	Screen width/height:1600/1200
00:31:17     INFO -  	colorDepth:24
00:31:17     INFO -  	Browser inner width/height: 1024/679
00:31:17     INFO -  browser_name:Firefox
00:31:17     INFO -  browser_version:26.0a1
00:31:17     INFO -  buildID:20130911231838
00:31:17     INFO -  PROCESS-CRASH | tp5o | application crashed [@ nsScriptLoader::GetScriptContext(JSObject**)]
00:31:17     INFO -  Crash dump filename: /tmp/tmp52Cuab/profile/minidumps/07134910-1f42-6bf7-11744205-4489f4ca.dmp
00:31:17     INFO -  Operating system: Linux
00:31:17     INFO -                    0.0.0 Linux 3.2.0-38-generic-pae #61-Ubuntu SMP Tue Feb 19 12:39:51 UTC 2013 i686
00:31:17     INFO -  CPU: x86
00:31:17     INFO -       GenuineIntel family 6 model 30 stepping 5
00:31:17     INFO -       8 CPUs
00:31:17     INFO -  Crash reason:  SIGSEGV
00:31:17     INFO -  Crash address: 0x0
00:31:17     INFO -  Thread 0 (crashed)
00:31:17     INFO -   0  libxul.so!nsScriptLoader::GetScriptContext(JSObject**) [nsScriptLoader.cpp:5a4bb2092618 : 924 + 0x3]
00:31:17     INFO -      eip = 0xb436c751   esp = 0xbfa22be4   ebp = 0xbfa22c08   ebx = 0xb6e5d19c
00:31:17     INFO -      esi = 0x8f094740   edi = 0x8f094740   eax = 0x00000000   ecx = 0x00000000
00:31:17     INFO -      edx = 0xbfa22bfc   efl = 0x00010296
00:31:17     INFO -      Found by: given as instruction pointer in context
00:31:17     INFO -   1  libxul.so!nsScriptLoader::AttemptAsyncScriptParse(nsScriptLoadRequest*) [nsScriptLoader.cpp:5a4bb2092618 : 770 + 0xd]
00:31:17     INFO -      eip = 0xb436c828   esp = 0xbfa22c10   ebp = 0xbfa22ca8   ebx = 0xb6e5d19c
00:31:17     INFO -      esi = 0x8f094740   edi = 0x8f094740
00:31:17     INFO -      Found by: call frame info
00:31:17     INFO -   2  libxul.so!nsScriptLoader::ProcessRequest(nsScriptLoadRequest*, void**) [nsScriptLoader.cpp:5a4bb2092618 : 807 + 0xa]
00:31:17     INFO -      eip = 0xb436cd14   esp = 0xbfa22cb0   ebp = 0xbfa22da8   ebx = 0xb6e5d19c
00:31:17     INFO -      esi = 0x8f094740   edi = 0x00000000
00:31:17     INFO -      Found by: call frame info
00:31:17     INFO -   3  libxul.so!nsScriptLoader::ProcessPendingRequests() [nsScriptLoader.cpp:5a4bb2092618 : 1041 + 0xd]
00:31:17     INFO -      eip = 0xb436de08   esp = 0xbfa22db0   ebp = 0xbfa22de8   ebx = 0xb6e5d19c
00:31:17     INFO -      esi = 0x8f0031f0   edi = 0x00000000
00:31:17     INFO -      Found by: call frame info
00:31:17     INFO -   4  libxul.so!nsScriptLoader::OnStreamComplete(nsIStreamLoader*, nsISupports*, tag_nsresult, unsigned int, unsigned char const*) [nsScriptLoader.cpp:5a4bb2092618 : 1250 + 0x8]
00:31:17     INFO -      eip = 0xb436e37d   esp = 0xbfa22df0   ebp = 0xbfa22e18   ebx = 0xb6e5d19c
00:31:17     INFO -      esi = 0x8f0031f0   edi = 0x00000000
00:31:17     INFO -      Found by: call frame info
00:31:17     INFO -   5  libxul.so!nsStreamLoader::OnStopRequest(nsIRequest*, nsISupports*, tag_nsresult) [nsStreamLoader.cpp:5a4bb2092618 : 101 + 0x14]
00:31:17     INFO -      eip = 0xb3f85904   esp = 0xbfa22e20   ebp = 0xbfa22e68   ebx = 0xb6e5d19c
00:31:17     INFO -      esi = 0x8f0172b0   edi = 0x8f0172c4
00:31:17     INFO -      Found by: call frame info
00:31:17     INFO -   6  libxul.so!nsHTTPCompressConv::OnStopRequest(nsIRequest*, nsISupports*, tag_nsresult) [nsHTTPCompressConv.cpp:5a4bb2092618 : 94 + 0x14]
00:31:17     INFO -      eip = 0xb3f9a573   esp = 0xbfa22e70   ebp = 0xbfa22e88   ebx = 0xb6e5d19c
00:31:17     INFO -      esi = 0x8f017b80   edi = 0x8f2fd120
00:31:17     INFO -      Found by: call frame info
00:31:17     INFO -   7  libxul.so!nsStreamListenerTee::OnStopRequest(nsIRequest*, nsISupports*, tag_nsresult) [nsStreamListenerTee.cpp:5a4bb2092618 : 53 + 0xe]
}
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
Can we figure out what caused this and back it out?
Flags: needinfo?(ryanvm)
Flags: needinfo?(kwierso)
Flags: needinfo?(emorley)
| Updated•12 years ago
           | 
Flags: needinfo?(ryanvm)
| Comment 10•12 years ago
           | ||
Seems highly likely that this and bug 915882 are regressions from bug 906371, which already has other stuff landed on top of it.
| Assignee | ||
| Comment 11•12 years ago
           | ||
I think that at the point we call GetScriptContext while attempting an async parse, the proper checks haven't yet been done to ensure there is a window to execute on.
        Attachment #804040 -
        Flags: review?(bzbarsky)
Flags: needinfo?(bhackett1024)
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
| Assignee | ||
| Comment 16•12 years ago
           | ||
Actually, it's more likely that mDocument->GetInnerWindow() is returning NULL since the inner window has gone away (a check which happens in ProcessRequest but not AttemptAsyncScriptParse).
        Attachment #804040 -
        Attachment is obsolete: true
        Attachment #804040 -
        Flags: review?(bzbarsky)
        Attachment #804084 -
        Flags: review?(bzbarsky)
| Assignee | ||
| Comment 17•12 years ago
           | ||
Pushing ahead of review to see if the intermittent failures go away...
https://hg.mozilla.org/integration/mozilla-inbound/rev/e64327542d6b
|   | ||
| Comment 18•12 years ago
           | ||
Comment on attachment 804084 [details] [diff] [review]
alternate
Ah, yes.  That could do it.
I'd prefer we did the null-check in nsScriptLoader::AttemptAsyncScriptParse.
But yes, this seems pretty likely to be the problem.
        Attachment #804084 -
        Flags: review?(bzbarsky) → review+
| Comment hidden (Legacy TBPL/Treeherder Robot) | 
|   | Reporter | |
| Comment 20•12 years ago
           | ||
Assignee: nobody → bhackett1024
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
| Updated•12 years ago
           | 
| Updated•12 years ago
           | 
Crash Signature: [@ nsScriptLoader::GetScriptContext(JSObject**)] → [@ nsScriptLoader::GetScriptContext(JSObject**)]
[@ nsScriptLoader::AttemptAsyncScriptParse(nsScriptLoadRequest*)]
| Updated•6 years ago
           | 
Component: DOM → DOM: Core & HTML
          You need to log in
          before you can comment on or make changes to this bug.
        
Description
•