Bug 915625 - Watch for NULL inner windows in AttemptAsyncScriptParse.